--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "taverna-rpg-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/bmonte/TavernaRPG.git",
-  "author": "bmonte <bmonte@outlook.com>",
+  "main": "src/shared/infra/http/server.ts",
+  "author": "Brunno Rodrigues",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
     "start": "ts-node src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -29,6 +29,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.47",
+    "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -39,7 +40,9 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.3"
