🚀 Finalizando configuração de deploy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,11 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
