--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "@types/node": "^14.0.11",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
     "class-transformer": "^0.2.3",
-    "cross-env": "^7.0.2",
     "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,8 +27,10 @@
     "pg-connection-string": "^2.2.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.10.2",
+    "tsconfig-paths": "^3.9.0",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
+    "typescript": "^3.9.3",
     "uuidv4": "^6.0.8"
   },
   "devDependencies": {
@@ -39,9 +41,9 @@
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
-    "@types/node": "^14.0.11",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "cross-env": "^7.0.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -51,9 +53,7 @@
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.3"
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "engines": {
     "node": "10.x",
