--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
     "start": "ts-node -r tsconfig-paths/register --files src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test jest",
+    "coverage": "cross-env NODE_ENV=test jest --coverage"
   },
   "dependencies": {
-    "@types/express": "^4.17.6",
-    "@types/helmet": "^0.0.47",
-    "@types/node": "^14.0.11",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
     "class-transformer": "^0.2.3",
@@ -31,12 +29,14 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "ts-node": "^8.10.2",
-    "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.25",
     "typescript": "^3.9.3",
     "uuidv4": "^6.0.8"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/helmet": "^0.0.47",
+    "@types/node": "^14.0.11",
     "@types/bcryptjs": "^2.4.2",
     "@types/hapi__joi": "^17.1.2",
     "@types/jest": "^25.2.3",
@@ -53,7 +53,8 @@
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0"
   },
   "engines": {
     "node": "10.x",
