--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.44",
     "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.25",
     "typescript": "^3.9.3",
@@ -53,8 +54,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.1.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-jest": "^26.1.0"
   },
   "engines": {
     "node": "10.x",
